V3 to prod (#60)
* 40 change backend response format to include all parameters (#56)

* work in progress vom firmen rechner

* work in progress

* implemented getRecomendations endpoint and it works ffs

* improve design a little (#54)

* update CORS settings (#59)

---------
